--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <div class="gallery-grid" id="galleryGrid">
       <div class="gallery-item" onclick="openBook()" data-vi-title="Sổ tay Hình Hoạ (Sách lật)" data-en-title="Drawing Handbook (Flipbook)">
-        <div class="gallery-image"><img src="Ảnh/Cover.png"></div>
+        <div class="gallery-image"><img src="Cover.png"></div>
         <div class="gallery-content">
           <h3 class="gallery-title" data-vi="Sổ tay Hình Hoạ" data-en="Drawing Sketchbook"></h3>
           <p class="gallery-desc" data-vi="Vẽ chì trên giấy." data-en="Pencil Drawing."></p>
@@ -216,7 +216,7 @@
            data-en-title="Rebirth"
            data-vi-full="<p>Khi đọc đề bài là sử dụng màu lạnh để thể hiện những yếu tố và quy tắc trong nghệ thuật, tôi rất phân vân và không biết phải xử lí như thế nào. Bỗng tôi vô tình lướt thấy một tấm hình trong bộ phim Prometheus 2012 do Ridley Scott đạo diễn. Ngay khoảnh khắc ấy, một tia sáng loé lên trong đầu tôi và ý tưởng về một bức tranh về người ngoài hành tinh được ra đời - “Tái sinh”.</p><p>“Chúng ta sẽ không biết mình có thể làm được những gì cho đến khi mình bắt tay vào thực hiện nó”. Thật vậy, khi đang chuẩn bị đồ để vẽ, tôi đã chần chừ và nghĩ “Làm sao mình có thể thể hiện được cảnh “sống lại”  của sinh vật ấy? Làm sao để mình có thể khiến cho người khác khi nhìn vào sẽ cảm nhận được sự rùng rợn, đáng sợ của sinh vật ấy?” Những câu hỏi nghi hoặc về khả năng bản thân luôn xuất hiện mỗi khi tôi bắt đầu vẽ những thứ mới mà tôi chưa từng thử. Tôi bắt đầu vẽ dù cho những nghi hoặc trong đầu vẫn còn hiện hữu. Mặc dù vậy, từng nét cọ của tôi vẫn mang theo sự tự tin, dứt khoát, sự kiên nhẫn, sự cảm nhận của tôi và cách tôi muốn mọi người cảm nhận khi nhìn vào bức tranh. Tôi đã dành cả 1 ngày để thực hiện bức tranh này và dù “kết quả về mặt điểm số” không được như ý muốn nhưng lần vẽ này là một trải nghiệm khó quên bởi lẽ “nếu tôi không dám thử thì tôi đã không biết mình có thể làm được những gì.”</p>"
            data-en-full="<p> When I first read the assignment requiring the use of cool colors to demonstrate art elements and principles, I felt completely stumped and didn't know where to begin. Then, I happened to stumble upon an image from the 2012 movie Prometheus directed by Ridley Scott. At that very moment, a spark lit up in my mind, and the concept for an alien painting was born—titled “Rebirth.”</p><p> “We never know what we are capable of until we actually try.” True enough, as I was setting up my art supplies, I hesitated, thinking: “How can I possibly capture the creature coming back to life? How can I make the viewer feel the sheer dread and eeriness of it?” Doubts about my own abilities always seem to creep in whenever I attempt something entirely new. Yet, I started painting despite those lingering uncertainties. Even so, each brushstroke carried confidence, precision, patience, and the exact emotions I wanted to convey to the audience. I spent an entire day on this piece, and although the grade wasn't quite what I had hoped for, the process was an unforgettable experience. After all, “if I hadn't dared to try, I never would have known what I was capable of.”</p>">
-        <div class="gallery-image"><img src="Ảnh/Tranh/Alien.jpg"></div>
+        <div class="gallery-image"><img src="Alien.jpg"></div>
         <div class="gallery-content">
           <h3 class="gallery-title" data-vi="Tái sinh" data-en="Rebirth"></h3>
           <p class="gallery-desc" data-vi="Acrylic trên giấy canson." data-en="Acrylic on canson paper."></p>
@@ -236,7 +236,7 @@
                           <p>When I got home, I created another digital draft to ensure I wouldn't make any mistakes with composition or proportion. I devoted 70% of my time just to preparing the concept before I even touched the final canvas. Every line showed certainty and patience; every single “dot” seemed to move, creating a scene where the lion—majestic and brave—dares to confront a massive natural force. It truly lived up to the title “King of Beasts.”</p>
                           <p>We may all look at the same painting, but each person will feel something different. A masterpiece isn't defined by “flowery praise”; it is beautiful because it captivates the viewer's soul and emotions, sparking curiosity and thought about its meaning. To create such a work, preparation and ideation are absolutely vital. Artists should make a habit of nurturing their ideas, spending enough time on them to create works that are beautiful not just on the “outside,” but on the “inside” as well.</p>
                          " >
-        <div class="gallery-image"><img src="Ảnh/Tranh/Sư tử.jpg"></div>
+        <div class="gallery-image"><img src="Sư tử.jpg"></div>
         <div class="gallery-content">
           <h3 class="gallery-title" data-vi="Dòng chảy gầm thét" data-en="Roaring Flow"></h3>
           <p class="gallery-desc" data-vi="Acrylic trên giấy canson." data-en="Acrylic on canson paper."></p>
