--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
       <div class="gallery-item art-item" 
            data-vi-title="Dòng chảy gầm thét" 
-           data-en-title="Roaring Flow"
+           data-en-title="The Roaring Current"
            data-vi-full="<p>“Dòng chảy gầm thét” là bức tranh đầu tiên tôi vẽ của môn học “Cơ sở tạo hình”. Nếu xét riêng theo quan điểm cá nhân, đây là bức tranh “đẹp toàn diện nhất” mà tôi từng tạo ra.</p>
                          <p>Trước khi thật sự nghiêm túc theo đuổi con đường nghệ thuật, tôi đã bắt đầu với việc vẽ động vật như là một cách để làm quen trước khi vẽ con người. Sư tử không phải là động vật “yêu thích” của tôi bởi tôi không thể tả được lông bờm sư tử (vấn đề kĩ năng). Nhưng vào cái ngày giảng viên cho tôi đề bài, lúc ấy, tôi đang phát thảo một con sư tử và trùng hợp thay, con sư tử ấy lại phù hợp “một cách bất ngờ” với yêu cầu đề bài. Tôi phát thảo một cách hoàn chỉnh hơn và được giảng viên chấp nhận ý tưởng đó. </p>
                          <p>Về nhà, tôi vẽ thêm một bản phát thảo nữa trên máy tính của tôi để chắc chắn rằng mình sẽ không mắc những sai về bố cục và tỉ lệ. Sau khi đã dành hết 70% thời gian của bản thân để chuẩn bị ý tưởng, tôi mới bắt tay vào thực hiện nó. Từng đường nét thể hiện sự chắc chắn, kiên nhẫn, từng “cái chấm” như đang chuyển chuyển động, tạo nên khung cảnh sư tử dám đối đầu với một thế lực to lớn nào đó ngoài tự nhiên một cách uy nghiêm và dũng mãnh, đúng với danh xưng “Chúa tể muôn loài”. </p>
@@ -238,7 +238,7 @@
                          " >
         <div class="gallery-image"><img src="Sư tử.jpg"></div>
         <div class="gallery-content">
-          <h3 class="gallery-title" data-vi="Dòng chảy gầm thét" data-en="Roaring Flow"></h3>
+          <h3 class="gallery-title" data-vi="Dòng chảy gầm thét" data-en="The Roaring Current"></h3>
           <p class="gallery-desc" data-vi="Acrylic trên giấy canson." data-en="Acrylic on canson paper."></p>
         </div>
       </div>
