--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                           <p>When I got home, I created another digital draft to ensure I wouldn't make any mistakes with composition or proportion. I devoted 70% of my time just to preparing the concept before I even touched the final canvas. Every line showed certainty and patience; every single “dot” seemed to move, creating a scene where the lion—majestic and brave—dares to confront a massive natural force. It truly lived up to the title “King of Beasts.”</p>
                           <p>We may all look at the same painting, but each person will feel something different. A masterpiece isn't defined by “flowery praise”; it is beautiful because it captivates the viewer's soul and emotions, sparking curiosity and thought about its meaning. To create such a work, preparation and ideation are absolutely vital. Artists should make a habit of nurturing their ideas, spending enough time on them to create works that are beautiful not just on the “outside,” but on the “inside” as well.</p>
                          " >
-        <div class="gallery-image"><img src="Sư tử.jpg"></div>
+        <div class="gallery-image"><img src="Sư tử.jpg"></div>
         <div class="gallery-content">
           <h3 class="gallery-title" data-vi="Dòng chảy gầm thét" data-en="The Roaring Current"></h3>
           <p class="gallery-desc" data-vi="Acrylic trên giấy canson." data-en="Acrylic on canson paper."></p>
